# script1488

./: .gitignore  README.md  deploy.sh  entries.html  entries.js  glitch.css  glitch.html  index.html  main.js  pyproject.toml  styles.css  submissions.css  submissions.html  submissions.js  website.7z  website.tar
pgtool/: __init__.py  cli.py  config.py  db.py  render.py
scripts/: glitch.js  register.js
src/pg_tool/: __init__.py  __main__.py  cli.py
styles/: glitch.css  main.css
