[project]
name = "pgtool"
version = "0.1.0"
description = "Command-line utility for convenient PostgreSQL workflows"
authors = [
    {name = "Auto Generated"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
pgtool = "pgtool.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
